--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "docker:disableMajor"]
+  "extends": ["config:base", "docker:disableMajor"],
+  "packageRules": [
+    {
+      "description": "Override versioning to manage tags like `node-18.12.0-bullseye-slim`",
+      "matchPackageNames": ["node"],
+      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)$"
+    }
+  ]
 }
