--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
 job1:
-  image: node:18.16.0-bullseye-slim
+  image: registry.gitlab.com/gitlab-ci-utils/docker-puppeteer:node-18.16.0-bullseye-slim
   script:
     - echo test
