--- a/renovate.json
+++ b/renovate.json
@@ -3,9 +3,10 @@
   "extends": ["config:base", "docker:disableMajor"],
   "packageRules": [
     {
-      "description": "Override versioning to manage tags like `node-18.12.0-bullseye-slim`",
-      "matchPackageNames": ["node"],
-      "versioning": "regex:^(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)$"
+      "matchPackageNames": [
+        "registry.gitlab.com/gitlab-ci-utils/docker-puppeteer"
+      ],
+      "versioning": "regex:^node-(?<major>\\d+)\\.(?<minor>\\d+)\\.(?<patch>\\d+)-(?<compatibility>.*)$"
     }
   ]
 }
