--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
   "author": "Aaron Goldenthal <aaron.goldenthal@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@playwright/test": "^1.36.1"
+    "@playwright/test": "1.36.0"
   }
 }
